Fix a bunch of VE alignment issues
Bug: T205149

--- a/resources/screen-mobile.less
+++ b/resources/screen-mobile.less
@@ -275,7 +275,6 @@ div.thumb {
 }
 
 .mw-body {
-	overflow: auto;
 	border: 0;
 
 	/* Keep images from overflowing */
@@ -287,6 +286,7 @@ div.thumb {
 
 #mw-content {
 	padding: @content-padding;
+	border-width: 0;
 }
 
 #mw-content-block {
